--- a/CompetentumWebApp/Views/AdminLte/Details.cshtml
+++ b/CompetentumWebApp/Views/AdminLte/Details.cshtml
@@ -4,153 +4,188 @@
     ViewBag.Title = "Details";
 }
 
+<h2>Резюме @Html.DisplayFor(model => model.last_name) @Html.DisplayFor(model => model.first_name) @Html.DisplayFor(model => model.middle_name)</h2>
+<h2>Должность @Html.DisplayFor(model => model.SpecializationName)</h2>
+<br />
 
-<div class="table-responsive">
-    <table class="table table-bordered table-hover">
-        <tr>
-            <th width=20%>
-                @Html.DisplayNameFor(model => model.last_name)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.last_name)
-            </th>
-        </tr>
+<div style="width:100%">
+    <h4>Основная информация</h4>
+    <div class="table-responsive" style="width:50%">
+        <table class="table table-bordered table-hover">
+            <tr>
+                <th @*width=20%*@>
+                    @Html.DisplayNameFor(model => model.last_name)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.last_name)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.first_name)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.first_name)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.first_name)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.first_name)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.middle_name)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.middle_name)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.middle_name)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.middle_name)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.age)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.age)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.gender_Name)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.gender_Name)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.birth_date)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.birth_date)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.birth_date)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.birth_date)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.CityName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.CityName)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.CityName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.CityName)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MetroName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.MetroName)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.MetroName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.MetroName)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.RelocationName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.RelocationName)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.PhoneNumber)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.PhoneNumber)
+                </th>
+            </tr>
+        </table>
+    </div>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.IsTripReadyName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.IsTripReadyName)
-            </th>
-        </tr>
+    <h4>Ожидания</h4>
+    <div class="table-responsive" style="width:50%">
+        <table class="table table-bordered table-hover">
+            <tr>
+                <th @*width=20%*@>
+                    @Html.DisplayNameFor(model => model.SpecializationName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.SpecializationName)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.PhoneNumber)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.SalaryAmount)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.SalaryAmount) @*@Html.DisplayFor(model => model.SalaryCurrency) здесь должна быть валюта из таблицы*@
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.SpecializationName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.SpecializationName)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ScheduleName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.ScheduleName)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.profarea_name)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.profarea_name)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.EmploymentName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.EmploymentName)
+                </th>
+            </tr>
+        </table>
+    </div>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.SalaryAmount)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.SalaryAmount)
-            </th>
-        </tr>
+    <div class="table-responsive" style="width:50%">
+        <table class="table table-bordered table-hover">
+            <tr>
+                <th>
+                    Опыт работы @*@Html.DisplayNameFor(model => model.ExperienceCompany)*@
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.ExperienceCompany) @Html.Raw(", ") @Html.DisplayFor(model => model.ExperiencePosition)
+                </th>
+            </tr>
 
-        @*<dt>
-                @Html.DisplayNameFor(model => model.SalaryCurrency)
-            </dt>
+            @*здесь должна быть подключена таблица, и должен выводиться уровень образования*@
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.PrimaryName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.PrimaryName)
+                </th>
+            </tr>
 
-            <dd>
-                @Html.DisplayFor(model => model.SalaryCurrency)
-            </dd>*@
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.skills)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.skills)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.EmploymentName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.EmploymentName)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.LanguageName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.LanguageName)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ScheduleName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.ScheduleName)
-            </th>
-        </tr>
+            @*здесь должна быть подключена таблица, и должен выводиться уровень владения языком*@
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.LanguageLevel)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.LanguageLevel)
+                </th>
+            </tr>
 
-        @*<dt>
+            @*<tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ExperiencePosition)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.ExperiencePosition)
+                </th>
+            </tr>*@
+
+            @*<dt>
                 @Html.DisplayNameFor(model => model.ElementaryName)
             </dt>
 
@@ -158,7 +193,7 @@
                 @Html.DisplayFor(model => model.ElementaryName)
             </dd>*@
 
-        @*<dt>
+            @*<dt>
                 @Html.DisplayNameFor(model => model.ElementaryYear)
             </dt>
 
@@ -166,43 +201,34 @@
                 @Html.DisplayFor(model => model.ElementaryYear)
             </dd>*@
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PrimaryName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.PrimaryName)
-            </th>
-        </tr>
+            @*<tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.PrimaryOrganization)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.PrimaryOrganization)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PrimaryOrganization)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.PrimaryOrganization)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.PrimaryResult)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.PrimaryResult)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PrimaryResult)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.PrimaryResult)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.PrimaryYear)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.PrimaryYear)
+                </th>
+            </tr>*@
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.PrimaryYear)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.PrimaryYear)
-            </th>
-        </tr>
-
-        @*<dt>
+            @*<dt>
                 @Html.DisplayNameFor(model => model.LevelName)
             </dt>
 
@@ -210,114 +236,125 @@
                 @Html.DisplayFor(model => model.LevelName)
             </dd>*@
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.LanguageName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.LanguageName)
-            </th>
-        </tr>
+            @*<tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.IndustryAreaName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.IndustryAreaName)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.LanguageLevel)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.LanguageLevel)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.IndustryName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.IndustryName)
+                </th>
+            </tr>*@
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.IndustryAreaName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.IndustryAreaName)
-            </th>
-        </tr>
+            @*<tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ExperienceStart)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.ExperienceStart)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.IndustryName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.IndustryName)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ExperienceEnd)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.ExperienceEnd)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ExperienceCompany)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.ExperienceCompany)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ExperienceDescription)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.ExperienceDescription)
+                </th>
+            </tr>*@
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ExperiencePosition)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.ExperiencePosition)
-            </th>
-        </tr>
+            @*<tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.CitizenshipName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.CitizenshipName)
+                </th>
+            </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ExperienceStart)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.ExperienceStart)
-            </th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.WorkTicketName)
+                </th>
+                <th>
+                    @Html.DisplayFor(model => model.WorkTicketName)
+                </th>
+            </tr>*@
+        </table>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ExperienceEnd)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.ExperienceEnd)
-            </th>
-        </tr>
+        <h4>История взаимодействия с кандидатом</h4>
+        <div class="table-responsive" style="width:50%">
+            <table class="table table-bordered table-hover">
+                <tr>
+                    <th @*width=20%*@>
+                        @Html.DisplayNameFor(model => model.Source)
+                    </th>
+                    <th>
+                        @Html.DisplayFor(model => model.Source)
+                    </th>
+                </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ExperienceDescription)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.ExperienceDescription)
-            </th>
-        </tr>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.State.StateName)
+                    </th>
+                    <th>
+                        @Html.DisplayFor(model => model.State.StateName) @*статус из таблицы*@
+                    </th>
+                </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.skills)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.skills)
-            </th>
-        </tr>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.StateDate)
+                    </th>
+                    <th>
+                        @Html.DisplayFor(model => model.StateDate)
+                    </th>
+                </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.CitizenshipName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.CitizenshipName)
-            </th>
-        </tr>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.InterviewDate)
+                    </th>
+                    <th>
+                        @Html.DisplayFor(model => model.InterviewDate)
+                    </th>
+                </tr>
 
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.WorkTicketName)
-            </th>
-            <th>
-                @Html.DisplayFor(model => model.WorkTicketName)
-            </th>
-        </tr>
-    </table>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Commentary)
+                    </th>
+                    <th>
+                        @Html.DisplayFor(model => model.Commentary)
+                    </th>
+                </tr>
+            </table>
+        </div>
+
+<h4>Связанные вакансии</h4>
+
+<h4>Предложение</h4>
+
+    </div>
 </div>
 <p>
     @*@Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |*@
