--- a/CompetentumWebApp/Views/AdminLte/ResumeView.cshtml
+++ b/CompetentumWebApp/Views/AdminLte/ResumeView.cshtml
@@ -20,6 +20,12 @@
                 @Html.DisplayNameFor(model => model.middle_name)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.gender_Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.birth_date)
+            </th>
+           <th>
                 @Html.DisplayNameFor(model => model.CityName)
             </th>
             <th>
@@ -34,6 +40,19 @@
             <th>
                 @Html.DisplayNameFor(model => model.State.StateName)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StateDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.InterviewDate)
+            </th>
+
+            @*нужны связанные вакансии*@
+
+            <th>
+                @Html.DisplayNameFor(model => model.Commentary)
+            </th>
+
             <th></th>
         </tr>
 
@@ -50,6 +69,12 @@
                     @Html.DisplayFor(modelItem => item.middle_name)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.gender_Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.birth_date)
+                </td>
+                <td>
                     @Html.DisplayFor(modelItem => item.CityName)
                 </td>
                 <td>
@@ -64,6 +89,19 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.State.StateName)
                 </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StateDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.InterviewDate)
+                </td>
+
+                @*нужны связанные вакансии*@
+
+                <th>
+                    @Html.DisplayFor(modelItem => item.Commentary)
+                </th>
+                
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
