--- a/CompetentumWebApp/Views/AdminLte/ResumeView.cshtml
+++ b/CompetentumWebApp/Views/AdminLte/ResumeView.cshtml
@@ -11,13 +11,7 @@
     <table class="table table-bordered table-hover">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.last_name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.first_name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.middle_name)
+                ФИО
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.gender_Name)
@@ -47,6 +41,9 @@
                 @Html.DisplayNameFor(model => model.InterviewDate)
             </th>
 
+            <th>
+                Связанные вакансии
+            </th>
             @*нужны связанные вакансии*@
 
             <th>
@@ -60,13 +57,10 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.last_name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.first_name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.middle_name)
+                    
+                    <p>@Html.DisplayFor(modelItem => item.last_name)</p>
+                    <p>@Html.DisplayFor(modelItem => item.first_name)</p> 
+                    <p>@Html.DisplayFor(modelItem => item.middle_name)</p> 
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.gender_Name)
@@ -96,11 +90,13 @@
                     @Html.DisplayFor(modelItem => item.InterviewDate)
                 </td>
 
-                @*нужны связанные вакансии*@
+                <td>
+                    @*нужны связанные вакансии*@
+                </td>
 
-                <th>
+                <td>
                     @Html.DisplayFor(modelItem => item.Commentary)
-                </th>
+                </td>
                 
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
