--- a/CompetentumWebApp/Views/AdminLte/Edit.cshtml
+++ b/CompetentumWebApp/Views/AdminLte/Edit.cshtml
@@ -213,3 +213,11 @@
 <div>
     @Html.ActionLink("Back to List", "ResumeView")
 </div>
+
+
+@section scripts {
+    @*NOTE: These should NOT be used in a production situation
+        They do contains useful snippets on how to setup charts*@
+    <script src="~/Scripts/AdminLTE/pages/dashboard2.js"></script>
+    <script src="~/Scripts/AdminLTE/demo.js"></script>
+}
