--- a/CompetentumWebApp/Views/Shared/_AdminLteLeftMenu.cshtml
+++ b/CompetentumWebApp/Views/Shared/_AdminLteLeftMenu.cshtml
@@ -52,8 +52,8 @@
             <li>
                 @*@Html.ActionLink("Добавить резюме с HeadHunter", "HeadHunter")*@
 
-                <a href="@Url.Action("HeadHunter", "AdminLte")">
-                    <i class="fa fa-folder"></i> <span>Добавить резюме с HeadHunter</span>
+                <a href="@Url.Action("ExportToExcel", "AdminLte")">
+                    <i class="fa fa-folder"></i> <span>Экспортировать вакансии</span>
                 </a>
             </li>
 
